package eapli.base.board.domain.domain;

public class BoardHistory {
}
